# nux

./: .travis.yml  Cargo.toml  README.md  build.sh  disk.toml  nux.toml
assets/: configuration-stub.nix  configuration.nix  disk.toml  user.nix
ci/: before_deploy.ps1  before_deploy.sh
src/: main.rs
src/commands/: gen.rs  initialise.rs  install.rs  mod.rs  repo.rs
src/commands/install/: disk.rs  zfs.rs
src/disk/: duct_util.rs  mod.rs  zfs.rs
