[package]
name = "nux"
version = "0.1.0"
authors = ["Chris Spencer <nux@chris-spencer.dev>"]
edition = "2018"

[dependencies]
structopt = "0.2"
config = "0.9"
toml = "0.4"
serde_derive = "1.0.89"
serde = "1.0.89"
duct = "0.12.0"
rpassword = "2.1"
rust-embed = "4.3.0"
indicatif = "0.11.0"
handlebars = "1.1.0"
rand = "0.6.5"